# agent-remote-sync

./: .dockerignore  .gitignore  LICENSE  README.ko.md  README.md  pyproject.toml  smoke.py
.github/workflows/: ci.yml  docker-fullscale.yml
deepseek-test/: test_deepseek_scenarios.py
docker/: Dockerfile  compose.fullscale.yml
docs/: agent-pairing.md  bootstrap.md  development-plan.md  docker-fullscale-lab.md  filename-normalization.md  headless-handoff.md  protocol.md  release-notes-v0.1.md  security.md  transfer-state.md  usage-scenarios.md  v0.1-agentremote-browser-gui-crossos-proof-scenarios.md  v0.1-agentremote-fullscale-final-execution-scenarios.md  v0.1-agentremote-live-gui-crossos-final-scenarios.md  v0.1-agentremote-really-fullscale-next-scenarios.md  v0.1-agentremote-release-candidate-final-scenarios.md  v0.1-agentremote-rfs-visual-crosshost-next-scenarios.md  v0.1-fullscale-lab-runbook.md  v0.1-fullscale-test-scenarios.md  v0.1-really-fullscale-validation-matrix.md  v0.1-true-fullscale-next-phase-scenarios.md  v0.1-true-fullscale-test-scenarios.md  v0.1-validation-scenarios.md
prompts/: agent-remote-sync.md  agentftp.md  agentremote.md
src/agent_remote_sync/: __init__.py  bootstrap.py  cleanup.py  cli.py  common.py  common_types.py  connections.py  console.py  dashboard.py  filenames.py  firewall.py  handoff.py  headless.py  inbox.py  master.py  registry.py  security.py  slave.py  state.py  sync.py  tls.py  worker.py  workmem.py
src/agent_remote_sync/web/: __init__.py  dashboard.html  index.html
src/agentftp/: __init__.py  bootstrap.py  cli.py  common.py  connections.py  console.py  filenames.py  firewall.py  handoff.py  headless.py  inbox.py  master.py  security.py  slave.py  state.py  sync.py  tls.py  worker.py  workmem.py
src/agentftp/web/: __init__.py  index.html
src/agentremote/: __init__.py  approval.py  bootstrap.py  cleanup.py  cli.py  common.py  connections.py  console.py  daemon_profiles.py  filenames.py  firewall.py  handoff.py  headless.py  inbox.py  master.py  security.py  slave.py  state.py  swarm.py  sync.py  tls.py  worker.py  worker_policy.py  workmem.py
src/agentremote/web/: __init__.py  index.html
tests/: test_agent_remote_sync.py  test_agentftp.py  test_agentremote.py  test_docker_fullscale_tools.py  test_usage_scenarios.py
tools/: agentremote_rfs_gates.py  docker_fullscale_runner.py  docker_node_entry.py  generate_fullscale_lab_data.py  inspect_unicode_names.py  rfs_quick.py  rfs_runner.py  run_docker_fullscale.py
