[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentremote"
version = "0.1.0"
description = "Agent-friendly cross-host file/folder transfer and remote handoff tool"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "agent-remote-sync contributors" }]
dependencies = ["cryptography>=42"]

[project.urls]
Homepage = "https://github.com/daystar7777/agent-remote-sync"
Repository = "https://github.com/daystar7777/agent-remote-sync"
Issues = "https://github.com/daystar7777/agent-remote-sync/issues"

[project.scripts]
agentremote = "agentremote.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentremote = ["py.typed", "web/index.html"]
